fix: color for b500 in dark mode

--- a/src/components/common/navigation/navigation.scss
+++ b/src/components/common/navigation/navigation.scss
@@ -49,7 +49,7 @@
 #root > div > main {
     & > nav {
         width: 100%;
-        background: var(--B500);
+        background: var(--sidebar-bg);
         position: sticky;
         top: 0;
         display: flex;
@@ -122,7 +122,7 @@
                         display: inline-block;
                         width: 6px;
                         height: 32px;
-                        background-color: var(--bg-primary);
+                        background-color: var(--white);
                         border-radius: 3px;
                         margin-left: -3px;
                     }
