--- a/src/css/colorPalette.scss
+++ b/src/css/colorPalette.scss
@@ -18,6 +18,7 @@
     --white: #fff;
     --terminal-bg: #0b0f22;
     --backdrop-bg: #000000bf;
+    --sidebar-bg: #0066cc;
 
     &.theme {
         &__light {
@@ -93,7 +94,7 @@
             --V100: #211e33;
             --B700: #acd3ff;
             --B600: #90c4ff;
-            --B500: #0066cc;
+            --B500: #74B5FF;
             --B400: #5d91cc;
             --B300: #466d99;
             --B200: #2e4866;
